build/log/idf_py_stdout_output_10784
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D "C:\Users\ASUS\Desktop\ESP32 Projects\rc522_esp\build\bootloader" && C:\Espressif\tools\python\v6.0\venv\Scripts\python.exe C:/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/build/bootloader/bootloader.bin""
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rc522_esp.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/rc522_esp.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/build/config" -I"C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main" -IC:/esp/v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0/esp-idf/components/freertos/config/include -IC:/esp/v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0/esp-idf/components/heap/include -IC:/esp/v6.0/esp-idf/components/heap/tlsf -IC:/esp/v6.0/esp-idf/components/log/include -IC:/esp/v6.0/esp-idf/components/soc/include -IC:/esp/v6.0/esp-idf/components/soc/esp32 -IC:/esp/v6.0/esp-idf/components/soc/esp32/include -IC:/esp/v6.0/esp-idf/components/soc/esp32/register -IC:/esp/v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0/esp-idf/components/hal/esp32/include -IC:/esp/v6.0/esp-idf/components/hal/include -IC:/esp/v6.0/esp-idf/components/esp_rom/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0/esp-idf/components/esp_common/include -IC:/esp/v6.0/esp-idf/components/esp_system/include -IC:/esp/v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0/esp-idf/components/esp_stdio/include -IC:/esp/v6.0/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0/esp-idf/components/xtensa/include -IC:/esp/v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0/esp-idf/components/lwip/include -IC:/esp/v6.0/esp-idf/components/lwip/include/apps -IC:/esp/v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0/esp-idf/components/lwip/port/include -IC:/esp/v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -I"C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/src" -IC:/esp/v6.0/esp-idf/components/esp_driver_spi/include -IC:/esp/v6.0/esp-idf/components/esp_pm/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpspi/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpspi/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_driver_dma/include -IC:/esp/v6.0/esp-idf/components/esp_driver_gpio/include -IC:/esp/v6.0/esp-idf/components/driver/i2c/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/include -IC:/esp/v6.0/esp-idf/components/driver/twai/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/include -IC:/esp/v6.0/esp-idf/components/esp_driver_ledc/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ledc/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ledc/esp32/include @"C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp=." -fmacro-prefix-map=C:/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/rc522_esp.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\rc522_esp.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/rc522_esp.c.obj -c "C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c"
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c: In function 'app_main':
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:41:13: error: too many arguments to function 'blink_led'; expected 1, have 2
   41 |             blink_led(GPIO_NUM_15, 1);
      |             ^~~~~~~~~              ~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:10:13: note: declared here
   10 | static void blink_led(int8_t led_state);
      |             ^~~~~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:43:13: error: too many arguments to function 'blink_led'; expected 1, have 2
   43 |             blink_led(GPIO_NUM_15, 0);
      |             ^~~~~~~~~              ~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:10:13: note: declared here
   10 | static void blink_led(int8_t led_state);
      |             ^~~~~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:44:37: error: suggest braces around empty body in an 'if' statement [-Werror=empty-body]
   44 |         else if (blink_count == 100);
      |                                     ^
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:44:14: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
   44 |         else if (blink_count == 100);
      |              ^~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:45:13: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
   45 |             blink_count = 0;
      |             ^~~~~~~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:23:13: warning: unused variable 'snr' [-Wunused-variable]
   23 |     uint8_t snr[MAXRLEN]; // Mảng chứa mã ID của thẻ (UID)
      |             ^~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:22:13: warning: unused variable 'status' [-Wunused-variable]
   22 |     uint8_t status;
      |             ^~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c: At top level:
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:100:13: error: conflicting types for 'blink_led'; have 'void(int8_t,  int8_t)' {aka 'void(signed char,  signed char)'}
  100 | static void blink_led(int8_t led, int8_t led_state)
      |             ^~~~~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:10:13: note: previous declaration of 'blink_led' with type 'void(int8_t)' {aka 'void(signed char)'}
   10 | static void blink_led(int8_t led_state);
      |             ^~~~~~~~~
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:10:13: error: 'blink_led' used but never defined [-Werror]
C:/Users/ASUS/Desktop/ESP32 Projects/rc522_esp/main/rc522_esp.c:100:13: warning: 'blink_led' defined but not used [-Wunused-function]
  100 | static void blink_led(int8_t led, int8_t led_state)
      |             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
